--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -143,7 +143,7 @@
           </div>
 
           <!-- Components -->
-          <div class="decision-content" *ngIf="decision.outcome?.code === 'APPA' || decision.outcome?.code === 'APPR'">
+          <div class="decision-content">
             <div class="row">
               <h5>Decision Components and Conditions</h5>
             </div>
