Remove redundant max file size notices

--- a/portal-frontend/src/app/features/notifications/edit-submission/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/other-attachments/other-attachments.component.html
@@ -6,7 +6,7 @@
   </p>
 </div>
 <section>
-  <span class="subheading2">Upload Optional Attachments (Max. 100 MB per attachment)</span>
+  <span class="subheading2">Upload Optional Attachments</span>
   <div class="uploader">
     <app-file-drag-drop (uploadFiles)="attachDocument($event)" [showVirusError]="showVirusError"></app-file-drag-drop>
   </div>
