--- a/portal-frontend/src/app/features/notifications/notification-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/parcel/parcel.component.html
@@ -5,7 +5,7 @@
       <h4>Parcel {{ parcelInd + 1 }}</h4>
       <div>
         <button
-          *ngIf="showEdit"
+          *ngIf="showEdit && parcels.length > 1"
           class="mobile-hidden"
           mat-flat-button
           color="accent"
@@ -14,7 +14,7 @@
           Edit Parcel {{ parcelInd + 1 }}
         </button>
         <button
-          *ngIf="showEdit"
+          *ngIf="showEdit && parcels.length > 1"
           class="tablet-hidden"
           mat-icon-button
           color="accent"
