Show units for total area of SR
- Review stepW

--- a/portal-frontend/src/app/features/notifications/notification-details/proposal-details/proposal-details.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/proposal-details/proposal-details.component.html
@@ -13,7 +13,7 @@
 
   <div class="subheading2 grid-1">Total area of the SRW</div>
   <div class="grid-double">
-    {{ _notificationSubmission.totalArea }}
+    {{ _notificationSubmission.totalArea }} <ng-container *ngIf="_notificationSubmission.totalArea">ha</ng-container>
     <app-no-data [showRequired]="showErrors" *ngIf="!_notificationSubmission.totalArea"></app-no-data>
   </div>
 
