--- a/portal-frontend/src/app/features/notifications/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -20,9 +20,9 @@
       best of my/our knowledge, true and correct.
     </mat-checkbox>
     <mat-checkbox #checkbox4 color="primary" class="checkbox">
-      I/we understand that the Agricultural Land Commission will take the steps necessary to confirm the
-      accuracy of the information and documents provided. This information will be available for review by any member of
-      the public.
+      I/we understand that the Agricultural Land Commission will take the steps necessary to confirm the accuracy of the
+      information and documents provided. This information, excluding phone numbers and emails, will be available for
+      review by any member of the public once received by the ALC.
     </mat-checkbox>
   </div>
   <p>
