Add contact link to submit confirmation

--- a/portal-frontend/src/app/features/notifications/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -26,8 +26,8 @@
     </mat-checkbox>
   </div>
   <p>
-    If you have any questions about the collection or use of this information, please contact the Agricultural Land
-    Commission.
+    If you have any questions about the collection or use of this information, please
+    <a target="_blank" href="https://www.alc.gov.bc.ca/contact/">contact the Agricultural Land Commission.</a>
   </p>
   <div>
     <div class="step-controls">
